--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,4 +57,14 @@
             app:layout_constraintTop_toTopOf="@+id/nav_host_fragment"
             app:layout_constraintVertical_bias="0.0" />
 
+    <com.example.indoorapplication.chart.LeafLineChart
+            android:id="@+id/leaf_chart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            app:layout_constraintBottom_toTopOf="@+id/nav_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/nav_host_fragment"
+            app:layout_constraintTop_toBottomOf="@+id/device_rssi" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
