--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
     <lecho.lib.hellocharts.view.LineChartView
-            android:id="@+id/line_chart"
+            android:id="@+id/rssi_line_chart"
             android:layout_width="fill_parent"
             android:layout_height="300dp"
             android:layout_marginBottom="8dp"
