--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,12 +8,23 @@
         android:paddingTop="?attr/actionBarSize">
 
     <Button
-            android:id="@+id/button2"
+            android:id="@+id/confirm_settings_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="@string/confirm_settings"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.754" />
+
+    <ListView
+            android:id="@+id/device_addr_view"
+            android:layout_width="409dp"
+            android:layout_height="368dp"
+            app:layout_constraintBottom_toTopOf="@+id/confirm_settings_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
