--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,8 +5,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <com.example.indoorapplication.CanvasView
-            android:id="@+id/canvas_view"
+    <com.example.indoorapplication.MapImageView
+            android:id="@+id/map_view"
             android:layout_width="417dp"
             android:layout_height="731dp"
             app:layout_constraintBottom_toBottomOf="parent"
