--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,13 +5,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <com.example.indoorapplication.MapImageView
-            android:id="@+id/map_view"
-            android:layout_width="410dp"
-            android:layout_height="731dp"
-            android:scaleType="fitXY"
+    <com.example.indoorapplication.MapLayout
+            android:id="@+id/map_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+<!--    <FrameLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent">-->
+
+<!--        <com.example.indoorapplication.MapImageView-->
+<!--                android:id="@+id/map_view"-->
+<!--                android:layout_width="410dp"-->
+<!--                android:layout_height="731dp"-->
+<!--                android:scaleType="fitXY"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintHorizontal_bias="0.0"-->
+<!--                app:layout_constraintStart_toStartOf="parent" />-->
+
+<!--        <com.example.indoorapplication.MyImageView-->
+<!--                android:id="@+id/my_view"-->
+<!--                android:layout_width="410dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:scaleType="fitXY"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintHorizontal_bias="0.0"-->
+<!--                app:layout_constraintStart_toStartOf="parent" />-->
+
+<!--    </FrameLayout>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
