--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,29 +5,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView
-            android:id="@+id/distance_text_view_1"
-            android:layout_width="111dp"
-            android:layout_height="38dp"
-            android:layout_marginBottom="12dp"
-            android:text="@string/device_1"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toTopOf="@+id/distance_text_view_2"
-            app:layout_constraintEnd_toStartOf="@+id/distance_edit_text_1"
-            app:layout_constraintHorizontal_bias="0.861"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-            android:id="@+id/distance_text_view_2"
-            android:layout_width="111dp"
-            android:layout_height="38dp"
-            android:text="@string/device_2"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toTopOf="@+id/rssi_line_chart"
-            app:layout_constraintEnd_toStartOf="@+id/distance_edit_text_2"
-            app:layout_constraintHorizontal_bias="0.861"
-            app:layout_constraintStart_toStartOf="parent" />
-
     <lecho.lib.hellocharts.view.LineChartView
             android:id="@+id/rssi_line_chart"
             android:layout_width="fill_parent"
@@ -63,72 +40,160 @@
             app:layout_constraintTop_toBottomOf="@+id/rssi_line_chart"
             app:layout_constraintVertical_bias="0.502" />
 
+    <TextView
+            android:id="@+id/calculated_device_text_view_1"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:textSize="16sp"
+            app:fontFamily="sans-serif-thin"
+            app:layout_constraintStart_toEndOf="@+id/rssi_text_view_1"
+            app:layout_constraintTop_toBottomOf="@+id/calculated_device_text_view_0" />
+
     <EditText
             android:id="@+id/distance_edit_text_0"
-            android:layout_width="167dp"
-            android:layout_height="51dp"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
             android:gravity="center|center_horizontal"
             android:inputType="number"
-            android:textSize="30sp"
+            android:textSize="16sp"
             app:fontFamily="sans-serif-thin"
-            app:layout_constraintBottom_toTopOf="@+id/rssi_line_chart"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.659"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.413" />
+            app:layout_constraintStart_toEndOf="@+id/calculated_device_text_view_0"
+            app:layout_constraintTop_toTopOf="@+id/device_text_view_0" />
+
+    <TextView
+            android:id="@+id/rssi_text_view_2"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:textSize="16sp"
+            app:fontFamily="sans-serif-thin"
+            app:layout_constraintStart_toEndOf="@+id/device_text_view_2"
+            app:layout_constraintTop_toBottomOf="@+id/rssi_text_view_1" />
+
+    <TextView
+            android:id="@+id/rssi_text_view_0"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:textSize="16sp"
+            app:fontFamily="sans-serif-thin"
+            app:layout_constraintStart_toEndOf="@+id/device_text_view_0"
+            app:layout_constraintTop_toTopOf="@+id/device_text_view_0" />
+
+    <TextView
+            android:id="@+id/rssi_text_view_1"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:textSize="16sp"
+            app:fontFamily="sans-serif-thin"
+            app:layout_constraintStart_toEndOf="@+id/device_text_view_1"
+            app:layout_constraintTop_toBottomOf="@+id/rssi_text_view_0" />
+
+    <TextView
+            android:id="@+id/calculated_distance_text_view"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:text="@string/calculated_distance"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/calculated_device_text_view_0"
+            app:layout_constraintStart_toEndOf="@+id/rssi_text_view_0" />
+
+    <TextView
+            android:id="@+id/calculated_device_text_view_0"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:textSize="16sp"
+            app:fontFamily="sans-serif-thin"
+            app:layout_constraintStart_toEndOf="@+id/rssi_text_view_0"
+            app:layout_constraintTop_toTopOf="@+id/device_text_view_0" />
+
+    <TextView
+            android:id="@+id/device_text_view_1"
+            android:layout_width="75dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:text="@string/device_1"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="@+id/device_text_view_0"
+            app:layout_constraintTop_toBottomOf="@+id/device_text_view_0" />
+
+    <TextView
+            android:id="@+id/device_text_view_2"
+            android:layout_width="75dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:text="@string/device_2"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="@+id/device_text_view_0"
+            app:layout_constraintTop_toBottomOf="@+id/device_text_view_1" />
 
     <EditText
             android:id="@+id/distance_edit_text_2"
-            android:layout_width="167dp"
-            android:layout_height="51dp"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
             android:gravity="center|center_horizontal"
             android:inputType="number"
-            android:textSize="30sp"
+            android:textSize="16sp"
             app:fontFamily="sans-serif-thin"
-            app:layout_constraintBottom_toTopOf="@+id/rssi_line_chart"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.659"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-            android:id="@+id/distance_edit_text_1"
-            android:layout_width="167dp"
-            android:layout_height="51dp"
-            android:gravity="center|center_horizontal"
-            android:inputType="number"
-            android:textSize="30sp"
-            app:fontFamily="sans-serif-thin"
-            app:layout_constraintBottom_toTopOf="@+id/rssi_line_chart"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.659"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.706" />
-
-    <TextView
-            android:id="@+id/distance_text_view_0"
-            android:layout_width="111dp"
-            android:layout_height="38dp"
-            android:layout_marginBottom="12dp"
-            android:text="@string/device_0"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toTopOf="@+id/distance_text_view_1"
-            app:layout_constraintEnd_toStartOf="@+id/distance_edit_text_0"
-            app:layout_constraintHorizontal_bias="0.861"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/calculated_device_text_view_1"
+            app:layout_constraintTop_toBottomOf="@+id/distance_edit_text_0" />
 
     <TextView
             android:id="@+id/distance_text_view"
-            android:layout_width="89dp"
-            android:layout_height="39dp"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
             android:text="@string/distance"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/distance_edit_text_0"
+            app:layout_constraintStart_toEndOf="@+id/calculated_device_text_view_0" />
+
+    <TextView
+            android:id="@+id/calculated_device_text_view_2"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:textSize="16sp"
+            app:fontFamily="sans-serif-thin"
+            app:layout_constraintStart_toEndOf="@+id/rssi_text_view_2"
+            app:layout_constraintTop_toBottomOf="@+id/calculated_device_text_view_1" />
+
+    <TextView
+            android:id="@+id/device_text_view_0"
+            android:layout_width="75dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="71dp"
+            android:gravity="center|center_horizontal"
+            android:text="@string/device_0"
             android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/distance_text_view_0"
-            app:layout_constraintEnd_toStartOf="@+id/distance_edit_text_0"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+            android:id="@+id/distance_edit_text_1"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:inputType="number"
+            android:textSize="16sp"
+            app:fontFamily="sans-serif-thin"
+            app:layout_constraintStart_toEndOf="@+id/calculated_device_text_view_2"
+            app:layout_constraintTop_toBottomOf="@+id/distance_edit_text_2" />
+
+    <TextView
+            android:id="@+id/rssi_text_view"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:gravity="center|center_horizontal"
+            android:text="@string/rssi"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/rssi_text_view_0"
+            app:layout_constraintStart_toStartOf="@+id/rssi_text_view_0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
