--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
             android:id="@+id/navigation_home"
-            android:name="com.example.indoorapplication.ui.settings.SettingsFragment"
+            android:name="com.example.indoorapplication.ui.settings.DeviceSettingsFragment"
             android:label="@string/title_home"
             tools:layout="@layout/fragment_settings">
         <action
@@ -20,13 +20,13 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.indoorapplication.ui.dashboard.DashboardFragment"
+        android:name="com.example.indoorapplication.ui.dashboard.DataCollectingFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.indoorapplication.ui.notifications.NotificationsFragment"
+        android:name="com.example.indoorapplication.ui.notifications.DataProcessFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
